feat: modernize chat UI + enhance mobile responsiveness + restructure homepage
- Chat UI improvements:
  * Add Enter key to send (Shift+Enter for new line)
  * Auto-resize textarea with max height
  * iMessage/Messenger-style message bubbles with avatars
  * Blue gradient header with modern design
  * Full-screen chat on mobile, card layout on desktop
  * Circular send button with disabled states

- Homepage restructure:
  * Replace generic comparison with 'Why Choose Admiral Energy' section
  * Add video placeholder for founder introduction
  * Add trust pillars (Math-First, Zero-Pressure, NC-Expertise)
  * Quick comparison teaser linking to PowerPair page

- PowerPair page enhancement:
  * Add comprehensive Battery vs Generator comparison
  * Color-coded tables (green/yellow/blue sections)
  * Persona decision cards for self-selection
  * Honest cost analysis with Duke PowerPair incentive

- Mobile optimization:
  * All pages fully responsive
  * Touch-friendly buttons (44x44px min)
  * Tables scroll horizontally on mobile
  * Proper font sizes (no iOS zoom)
  * Responsive grids that stack properly

--- a/powerpair.html
+++ b/powerpair.html
@@ -272,6 +272,255 @@
         </div>
     </section>
 
+    <!-- Battery vs Generator Comparison -->
+    <section id="compare" class="py-16 bg-gradient-to-b from-white to-gray-50">
+        <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-12">
+                <h2 class="text-3xl md:text-4xl font-bold text-admiral-navy mb-4">Battery vs. Generator: The Honest Comparison</h2>
+                <p class="text-xl text-gray-600">Different tools for different needs — let's help you decide</p>
+            </div>
+
+            <!-- Enhanced Comparison Table -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden mb-12">
+                <!-- Lifestyle Factors Section (Green - Battery Wins) -->
+                <div class="bg-green-50 border-b-2 border-green-200">
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-green-800 mb-4 flex items-center">
+                            <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 20 20">
+                                <path d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"/>
+                            </svg>
+                            Lifestyle Factors (Battery Advantages)
+                        </h3>
+                        <div class="overflow-x-auto">
+                            <table class="w-full text-left">
+                                <thead>
+                                    <tr class="border-b border-green-200">
+                                        <th class="py-3 px-4 font-semibold text-gray-700">Factor</th>
+                                        <th class="py-3 px-4 font-semibold text-gray-700">Battery Backup</th>
+                                        <th class="py-3 px-4 font-semibold text-gray-700">Generator</th>
+                                    </tr>
+                                </thead>
+                                <tbody class="divide-y divide-green-100">
+                                    <tr>
+                                        <td class="py-4 px-4 font-medium">Noise Level</td>
+                                        <td class="py-4 px-4"><span class="text-green-600 font-semibold">✓ Silent operation</span></td>
+                                        <td class="py-4 px-4"><span class="text-red-600">✗ 60-75 dB (like a vacuum)</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-4 px-4 font-medium">Maintenance</td>
+                                        <td class="py-4 px-4"><span class="text-green-600 font-semibold">✓ Zero maintenance</span></td>
+                                        <td class="py-4 px-4"><span class="text-red-600">✗ Annual service ($200-400/yr)</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-4 px-4 font-medium">Fuel Requirements</td>
+                                        <td class="py-4 px-4"><span class="text-green-600 font-semibold">✓ No fuel needed</span></td>
+                                        <td class="py-4 px-4"><span class="text-red-600">✗ Propane/natural gas required</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-4 px-4 font-medium">Indoor Air Quality</td>
+                                        <td class="py-4 px-4"><span class="text-green-600 font-semibold">✓ No emissions</span></td>
+                                        <td class="py-4 px-4"><span class="text-red-600">✗ Outdoor exhaust required</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-4 px-4 font-medium">Installation Impact</td>
+                                        <td class="py-4 px-4"><span class="text-green-600 font-semibold">✓ Wall-mount, minimal footprint</span></td>
+                                        <td class="py-4 px-4"><span class="text-red-600">✗ Concrete pad, gas lines, permits</span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Cost Comparison Section (Yellow - Complex) -->
+                <div class="bg-yellow-50 border-b-2 border-yellow-200">
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-yellow-800 mb-4 flex items-center">
+                            <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 20 20">
+                                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"/>
+                            </svg>
+                            Cost Analysis (The Reality Check)
+                        </h3>
+                        <div class="overflow-x-auto">
+                            <table class="w-full text-left">
+                                <thead>
+                                    <tr class="border-b border-yellow-200">
+                                        <th class="py-3 px-4 font-semibold text-gray-700">Cost Factor</th>
+                                        <th class="py-3 px-4 font-semibold text-gray-700">Battery Backup</th>
+                                        <th class="py-3 px-4 font-semibold text-gray-700">Generator</th>
+                                    </tr>
+                                </thead>
+                                <tbody class="divide-y divide-yellow-100">
+                                    <tr>
+                                        <td class="py-4 px-4 font-medium">Upfront Cost</td>
+                                        <td class="py-4 px-4"><span class="text-yellow-700">△ $16,000-18,000 (before incentive)</span></td>
+                                        <td class="py-4 px-4"><span class="text-green-600 font-semibold">✓ $8,000-15,000 installed</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-4 px-4 font-medium">After Incentives</td>
+                                        <td class="py-4 px-4"><span class="text-green-600 font-semibold">✓ $7,000-9,000 (with Duke $9k)</span></td>
+                                        <td class="py-4 px-4"><span class="text-yellow-700">△ Same (no Duke incentive)</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-4 px-4 font-medium">10-Year Operating Cost</td>
+                                        <td class="py-4 px-4"><span class="text-green-600 font-semibold">✓ ~$200 (electricity only)</span></td>
+                                        <td class="py-4 px-4"><span class="text-red-600">✗ $2,000-4,000 (maintenance + fuel)</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-4 px-4 font-medium">Total 10-Year Cost</td>
+                                        <td class="py-4 px-4"><span class="text-green-600 font-semibold">✓ $7,200-9,200</span></td>
+                                        <td class="py-4 px-4"><span class="text-yellow-700">△ $10,000-19,000</span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="mt-4 p-4 bg-yellow-100 rounded-lg">
+                            <p class="text-sm text-yellow-900"><strong>Bottom Line:</strong> With Duke's $9,000 incentive, batteries cost significantly less over 10 years—even factoring in lower upfront generator costs.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Performance Section (Blue - Mixed Results) -->
+                <div class="bg-blue-50">
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-blue-800 mb-4 flex items-center">
+                            <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 20 20">
+                                <path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/>
+                                <path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z"/>
+                            </svg>
+                            Performance Comparison
+                        </h3>
+                        <div class="overflow-x-auto">
+                            <table class="w-full text-left">
+                                <thead>
+                                    <tr class="border-b border-blue-200">
+                                        <th class="py-3 px-4 font-semibold text-gray-700">Performance Factor</th>
+                                        <th class="py-3 px-4 font-semibold text-gray-700">Battery Backup</th>
+                                        <th class="py-3 px-4 font-semibold text-gray-700">Generator</th>
+                                    </tr>
+                                </thead>
+                                <tbody class="divide-y divide-blue-100">
+                                    <tr>
+                                        <td class="py-4 px-4 font-medium">Backup Duration</td>
+                                        <td class="py-4 px-4"><span class="text-yellow-700">△ 8-12 hours typical</span></td>
+                                        <td class="py-4 px-4"><span class="text-green-600 font-semibold">✓ Unlimited (with fuel)</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-4 px-4 font-medium">Power Capacity</td>
+                                        <td class="py-4 px-4"><span class="text-yellow-700">△ 5-10 kW continuous</span></td>
+                                        <td class="py-4 px-4"><span class="text-green-600 font-semibold">✓ 15-25 kW typical</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-4 px-4 font-medium">Switchover Speed</td>
+                                        <td class="py-4 px-4"><span class="text-green-600 font-semibold">✓ Instant (uninterrupted)</span></td>
+                                        <td class="py-4 px-4"><span class="text-yellow-700">△ 10-30 seconds delay</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-4 px-4 font-medium">Whole-Home Coverage</td>
+                                        <td class="py-4 px-4"><span class="text-yellow-700">△ Critical circuits only</span></td>
+                                        <td class="py-4 px-4"><span class="text-green-600 font-semibold">✓ Full home possible</span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Decision Framework: Persona Cards -->
+            <div class="grid md:grid-cols-2 gap-8 mb-8">
+                <!-- Battery Perfect For -->
+                <div class="bg-gradient-to-br from-green-50 to-green-100 rounded-lg shadow-lg p-8 border-2 border-green-300">
+                    <div class="flex items-center mb-6">
+                        <div class="bg-green-500 text-white rounded-full w-12 h-12 flex items-center justify-center mr-4">
+                            <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/>
+                            </svg>
+                        </div>
+                        <h3 class="text-2xl font-bold text-green-800">Battery Perfect For You If...</h3>
+                    </div>
+                    <ul class="space-y-3 text-gray-700">
+                        <li class="flex items-start">
+                            <span class="text-green-600 font-bold mr-3 text-lg">✓</span>
+                            <span><strong>Short outages are your concern</strong> — Most NC outages last 2-6 hours (storms, trees)</span>
+                        </li>
+                        <li class="flex items-start">
+                            <span class="text-green-600 font-bold mr-3 text-lg">✓</span>
+                            <span><strong>You value quiet & clean</strong> — No noise, no exhaust, zero maintenance hassle</span>
+                        </li>
+                        <li class="flex items-start">
+                            <span class="text-green-600 font-bold mr-3 text-lg">✓</span>
+                            <span><strong>Duke's $9k incentive is available</strong> — Makes batteries cost-competitive or cheaper</span>
+                        </li>
+                        <li class="flex items-start">
+                            <span class="text-green-600 font-bold mr-3 text-lg">✓</span>
+                            <span><strong>You're considering solar anyway</strong> — Battery + solar is a powerful combo</span>
+                        </li>
+                        <li class="flex items-start">
+                            <span class="text-green-600 font-bold mr-3 text-lg">✓</span>
+                            <span><strong>Set-it-and-forget-it appeals to you</strong> — Install once, it just works for 10+ years</span>
+                        </li>
+                    </ul>
+                    <div class="mt-6 p-4 bg-white rounded-lg border-l-4 border-green-500">
+                        <p class="text-sm text-gray-700"><strong>💡 Pro Tip:</strong> Batteries work for 85% of NC homeowners who want backup without the hassle. If most outages in your area are under 12 hours, battery is your best bet.</p>
+                    </div>
+                </div>
+
+                <!-- Generator Perfect For -->
+                <div class="bg-gradient-to-br from-orange-50 to-orange-100 rounded-lg shadow-lg p-8 border-2 border-orange-300">
+                    <div class="flex items-center mb-6">
+                        <div class="bg-orange-500 text-white rounded-full w-12 h-12 flex items-center justify-center mr-4">
+                            <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"/>
+                            </svg>
+                        </div>
+                        <h3 class="text-2xl font-bold text-orange-800">Generator Perfect For You If...</h3>
+                    </div>
+                    <ul class="space-y-3 text-gray-700">
+                        <li class="flex items-start">
+                            <span class="text-orange-600 font-bold mr-3 text-lg">✓</span>
+                            <span><strong>You need multi-day backup</strong> — Ice storms, hurricanes, or rural outages lasting 24+ hours</span>
+                        </li>
+                        <li class="flex items-start">
+                            <span class="text-orange-600 font-bold mr-3 text-lg">✓</span>
+                            <span><strong>Whole-home power is essential</strong> — Running A/C, electric heat, well pump, and everything else simultaneously</span>
+                        </li>
+                        <li class="flex items-start">
+                            <span class="text-orange-600 font-bold mr-3 text-lg">✓</span>
+                            <span><strong>You already have natural gas service</strong> — Generator hookup is simpler and cheaper</span>
+                        </li>
+                        <li class="flex items-start">
+                            <span class="text-orange-600 font-bold mr-3 text-lg">✓</span>
+                            <span><strong>Medical equipment requires 100% uptime</strong> — Unlimited runtime is non-negotiable</span>
+                        </li>
+                        <li class="flex items-start">
+                            <span class="text-orange-600 font-bold mr-3 text-lg">✓</span>
+                            <span><strong>Duke's PowerPair slots are gone</strong> — Program capacity filled in your area</span>
+                        </li>
+                    </ul>
+                    <div class="mt-6 p-4 bg-white rounded-lg border-l-4 border-orange-500">
+                        <p class="text-sm text-gray-700"><strong>⚠️ Reality Check:</strong> Generators are the right tool for extended outages and high-demand homes. Just budget for annual maintenance ($200-400) and noise near your outdoor unit.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Call to Action -->
+            <div class="text-center bg-admiral-navy text-white rounded-lg p-8 shadow-lg">
+                <h3 class="text-2xl font-bold mb-4">Still Not Sure Which Is Right for You?</h3>
+                <p class="text-lg mb-6 text-gray-200">Let's run the numbers for your specific home and outage patterns</p>
+                <div class="flex flex-col sm:flex-row gap-4 justify-center">
+                    <a href="/quote.html" class="bg-admiral-gold text-admiral-navy px-8 py-3 rounded-lg font-semibold hover:bg-yellow-400 transition-colors inline-block">
+                        Get Your Custom Analysis
+                    </a>
+                    <button onclick="if(window.openChatWidget) window.openChatWidget()" class="bg-white text-admiral-navy px-8 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors">
+                        Chat with The Admiral
+                    </button>
+                </div>
+                <p class="text-sm text-gray-300 mt-4">No pressure, just honest math and real-world advice</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Timeline & Process -->
     <section class="py-16 bg-gray-50">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
