fix: integrate chat lead capture with Netlify Forms
- Add hidden form in index.html for Netlify build bot detection
- Form name: chat-lead-capture
- Update chat UI to use Netlify Forms submission instead of serverless function
- Add hidden fields: form-name, source, page, context
- Submit as application/x-www-form-urlencoded to Netlify
- Leads now appear in Netlify Dashboard → Forms → chat-lead-capture
- Keep GA4 tracking (generate_lead event)
- Maintain same UX: inline form, success message, conversation continues

--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     
+    <!-- Hidden form for Netlify build bot detection - Chat Lead Capture -->
+    <form name="chat-lead-capture" netlify netlify-honeypot="bot-field" hidden>
+        <input type="text" name="name" />
+        <input type="email" name="email" />
+        <input type="tel" name="phone" />
+        <input type="text" name="context" />
+        <input type="text" name="source" />
+        <input type="text" name="page" />
+    </form>
+    
     <!-- Navigation -->
     <nav class="bg-admiral-navy text-white sticky top-0 z-50 shadow-lg">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
