a11y: add skip-to-main link + main landmark across all pages
- Added skip link as first element in <body> on all 8 HTML pages
- Skip link is sr-only by default, visible on focus with proper positioning
- Added <main id='main' tabindex='-1'> landmark to all pages
- about.html: added id and tabindex to existing <main> tag
- All other pages: wrapped content between nav and footer in new <main> tag
- Ensures keyboard users can skip navigation and jump to main content
- Meets WCAG 2.1 Level A bypass blocks requirement

--- a/about.html
+++ b/about.html
@@ -54,6 +54,11 @@
     <!-- End Google Tag Manager -->
 </head>
 <body class="bg-admiral-white text-gray-900 font-sans">
+    <!-- Skip to main content link for accessibility -->
+    <a class="sr-only focus:not-sr-only focus:absolute focus:top-2 focus:left-2 bg-white text-black p-2 rounded z-[9999]" href="#main">
+        Skip to main content
+    </a>
+    
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N6HRP34Z"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -101,7 +106,8 @@
         </div>
     </nav>
 
-    <main class="max-w-3xl mx-auto px-4 py-16 space-y-6">
+    <!-- Main Content -->
+    <main id="main" tabindex="-1" class="max-w-3xl mx-auto px-4 py-16 space-y-6">
       <img src="/public/logos/ae-logo-horiz-bg.png" alt="Admiral Energy" class="h-14 w-auto" />
 
       <h1 class="text-4xl font-semibold text-[#0c2f4a]">About Admiral Energy</h1>
