--- a/case-studies.html
+++ b/case-studies.html
@@ -54,6 +54,11 @@
     <!-- End Google Tag Manager -->
 </head>
 <body class="bg-admiral-white text-gray-900 font-sans">
+    <!-- Skip to main content link for accessibility -->
+    <a class="sr-only focus:not-sr-only focus:absolute focus:top-2 focus:left-2 bg-white text-black p-2 rounded z-[9999]" href="#main">
+        Skip to main content
+    </a>
+    
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N6HRP34Z"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -101,6 +106,8 @@
         </div>
     </nav>
 
+    <!-- Main Content -->
+    <main id="main" tabindex="-1">
     <!-- Hero Section -->
     <section class="bg-gradient-to-br from-admiral-navy to-blue-900 text-white py-16">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
@@ -394,6 +401,8 @@
             </div>
         </div>
     </footer>
+    </main>
+    <!-- End Main Content -->
 
     <!-- JavaScript -->
     <script>
