--- a/404.html
+++ b/404.html
@@ -47,6 +47,11 @@
     <!-- End Google Tag Manager -->
 </head>
 <body class="bg-admiral-white text-gray-900 font-sans">
+    <!-- Skip to main content link for accessibility -->
+    <a class="sr-only focus:not-sr-only focus:absolute focus:top-2 focus:left-2 bg-white text-black p-2 rounded z-[9999]" href="#main">
+        Skip to main content
+    </a>
+    
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N6HRP34Z"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -94,6 +99,8 @@
         </div>
     </nav>
 
+    <!-- Main Content -->
+    <main id="main" tabindex="-1">
     <!-- 404 Content -->
     <section class="py-20 bg-white min-h-screen flex items-center">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
@@ -189,6 +196,8 @@
             </div>
         </div>
     </footer>
+    </main>
+    <!-- End Main Content -->
 
     <!-- JavaScript -->
     <script>
