--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
     <!-- End Google Tag Manager -->
 </head>
 <body class="bg-admiral-white text-gray-900 font-sans">
+    <!-- Skip to main content link for accessibility -->
+    <a class="sr-only focus:not-sr-only focus:absolute focus:top-2 focus:left-2 bg-white text-black p-2 rounded z-[9999]" href="#main">
+        Skip to main content
+    </a>
+    
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N6HRP34Z"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -116,6 +121,8 @@
         </div>
     </nav>
 
+    <!-- Main Content -->
+    <main id="main" tabindex="-1">
     <!-- Urgency Banner -->
     <div id="urgency-banner" class="bg-admiral-gold text-admiral-navy py-3 px-4 text-center">
         <div class="max-w-6xl mx-auto flex items-center justify-between">
@@ -502,6 +509,8 @@
             </div>
         </div>
     </footer>
+    </main>
+    <!-- End Main Content -->
 
     <!-- JavaScript -->
     <script>
