chore: remove unused files and update documentation
Deleted 5 orphaned files:
- public/images/favicon.png (unused, replaced by ae-favicon-*)
- public/images/favicon-16x16.png (unused)
- public/images/favicon-32x32.png (unused)
- public/images/apple-touch-icon.png (unused, replaced by ae-apple-180.png)
- public/scripts/admiral-chat.js (legacy script, replaced by admiral-chat-ui.js)

Updated documentation:
- Fixed outdated comment in index.html (line 418)
- Updated README file counts and structure
- Documented cleanup completion and results
- Reduced tracked files from 42 to 37

Benefits:
- Cleaner repository structure
- No dead code or orphaned assets
- Improved code clarity and maintainability

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
             
             <div class="bg-white p-6 rounded-lg shadow-md">
                 <div class="bg-gray-100 p-8 rounded border-2 border-dashed border-gray-300" data-admiral-placeholder>
-                    <!-- Replaced by admiral-chat.js at runtime -->
+                    <!-- Chat widget injected by admiral-chat-ui.js at runtime -->
                     <p class="text-gray-600">Loading The Admiral…</p>
                     <noscript>
                         <p class="text-gray-600 mt-2">
