Remove ITC references and implement performance optimizations
- Remove all Federal ITC and 30% tax credit references (deadline passed Dec 31, 2025)
  - Removed urgency banner from index.html
  - Updated incentives section to show only PowerPair program
  - Removed ITC from all example calculations in powerpair.html
  - Updated chatbot system prompts and knowledge base
  - Updated services.html and case-studies.html

- Performance optimizations:
  - Created shared-utils.js to eliminate duplicate JavaScript (~2KB saved per page)
  - Added resource hints (dns-prefetch, preconnect) to all pages
  - Deferred Tailwind CSS script to prevent render-blocking
  - Added width/height attributes to all images (prevents CLS)
  - Added lazy loading to below-fold images
  - Consolidated mobile menu, exit intent, and smooth scroll code

- Files modified:
  - All 8 HTML pages (index, powerpair, services, case-studies, quote, about, thank-you, 404)
  - netlify/functions/admiral-chat.js
  - netlify/functions/knowledge-base.js
  - Created: public/scripts/shared-utils.js
  - Created: WEBSITE_OPTIMIZATION_ANALYSIS.md

Expected improvements: LCP -0.5-1s, CLS <0.1, reduced JS size

--- a/thank-you.html
+++ b/thank-you.html
@@ -20,13 +20,18 @@
     <link rel="manifest" href="/public/logos/site.webmanifest" />
     <meta name="theme-color" content="#0c2f4a" />
 
+    <!-- Resource Hints for Performance -->
+    <link rel="dns-prefetch" href="https://www.googletagmanager.com">
+    <link rel="dns-prefetch" href="https://cdn.tailwindcss.com">
+    <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+
     <!-- Social -->
     <meta property="og:image" content="/public/logos/admiral-energy-share.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="/public/logos/admiral-energy-share.png" />
     
     <!-- Tailwind CSS via CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com" defer></script>
     <script>
         tailwind.config = {
             theme: {
@@ -63,7 +68,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <img src="/public/logos/ae-logo-horiz-bg.png" alt="Admiral Energy" class="h-8 md:h-9 w-auto rounded-lg p-0.5 shadow-sm ring-1 ring-black/5">
+                    <img src="/public/logos/ae-logo-horiz-bg.png" alt="Admiral Energy" width="200" height="50" class="h-8 md:h-9 w-auto rounded-lg p-0.5 shadow-sm ring-1 ring-black/5">
                     <span class="ml-3 text-xl font-bold">Admiral Energy</span>
                 </div>
                 
@@ -163,7 +168,7 @@
             <div class="grid md:grid-cols-4 gap-8">
                 <div class="md:col-span-2">
                     <div class="flex items-center mb-4">
-                        <img src="/public/logos/ae-logo-horiz-bg.png" alt="Admiral Energy" class="h-7 w-auto rounded-md p-0.5 shadow-sm ring-1 ring-black/5">
+                        <img src="/public/logos/ae-logo-horiz-bg.png" alt="Admiral Energy" width="200" height="50" loading="lazy" class="h-7 w-auto rounded-md p-0.5 shadow-sm ring-1 ring-black/5">
                         <span class="ml-3 text-xl font-bold">Admiral Energy</span>
                     </div>
                     <p class="text-gray-300 mb-4">Honest backup power guidance for North Carolina homes and businesses.</p>
