--- a/about.html
+++ b/about.html
@@ -21,13 +21,18 @@
     <link rel="manifest" href="/public/logos/site.webmanifest" />
     <meta name="theme-color" content="#0c2f4a" />
 
+    <!-- Resource Hints for Performance -->
+    <link rel="dns-prefetch" href="https://www.googletagmanager.com">
+    <link rel="dns-prefetch" href="https://cdn.tailwindcss.com">
+    <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+
     <!-- Social -->
     <meta property="og:image" content="/public/logos/admiral-energy-share.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="/public/logos/admiral-energy-share.png" />
     
     <!-- Tailwind CSS via CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com" defer></script>
     <script>
         tailwind.config = {
             theme: {
@@ -167,7 +172,7 @@
             <div class="grid md:grid-cols-4 gap-8">
                 <div class="md:col-span-2">
                     <div class="flex items-center mb-4">
-                        <img src="/public/logos/ae-logo-horiz-bg.png" alt="Admiral Energy" class="h-7 w-auto rounded-md p-0.5 shadow-sm ring-1 ring-black/5">
+                        <img src="/public/logos/ae-logo-horiz-bg.png" alt="Admiral Energy" width="200" height="50" loading="lazy" class="h-7 w-auto rounded-md p-0.5 shadow-sm ring-1 ring-black/5">
                         <span class="ml-3 text-xl font-bold">Admiral Energy</span>
                     </div>
                     <p class="text-gray-300 mb-4">Backup Power System Experts for North Carolina. Battery first, solar when it makes sense.</p>
@@ -200,18 +205,8 @@
         </div>
     </footer>
 
-    <!-- JavaScript -->
-    <script>
-        // Mobile menu toggle
-        const mobileMenuButton = document.getElementById('mobile-menu-button');
-        const mobileMenu = document.getElementById('mobile-menu');
-
-        mobileMenuButton.addEventListener('click', () => {
-            const isExpanded = mobileMenuButton.getAttribute('aria-expanded') === 'true';
-            mobileMenuButton.setAttribute('aria-expanded', !isExpanded);
-            mobileMenu.classList.toggle('hidden');
-        });
-    </script>
+    <!-- Shared Utilities -->
+    <script defer src="/public/scripts/shared-utils.js"></script>
 </body>
 </html>
 
