--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </script>
     
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="/styles.css?v=2025-10-30a">
+    <link rel="stylesheet" href="/styles.css?v=2025-12-01">
     
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
