Fix: Remove defer from Tailwind CSS - required for styling
- Tailwind CDN must load synchronously to apply styles
- Defer was causing unstyled content flash
- Other optimizations (shared-utils, lazy loading, resource hints) remain

--- a/thank-you.html
+++ b/thank-you.html
@@ -31,7 +31,7 @@
     <meta name="twitter:image" content="/public/logos/admiral-energy-share.png" />
     
     <!-- Tailwind CSS via CDN -->
-    <script src="https://cdn.tailwindcss.com" defer></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
             theme: {
