--- a/quote.html
+++ b/quote.html
@@ -41,7 +41,7 @@
     </style>
     
     <!-- Tailwind CSS via CDN -->
-    <script src="https://cdn.tailwindcss.com" defer></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
             theme: {
